<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
   http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>edu.pse.beast</groupId>
	<artifactId>Beast</artifactId>
	<version>2.02</version>
	<packaging>jar</packaging>

	<name>Beast</name>
	<description>
       BEAST aims to make the verification of voting rules easier.
       Voting rules are methods to aggregate the preferences of a group to make decisions.
   </description>
	<url>https://github.com/mi-ki/BEAST</url>
	<organization>
		<name>KIT</name>
		<url>https://www.kit.edu</url>
	</organization>
	<properties>
		<skipTests>false</skipTests>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.12</maven.compiler.source>
		<maven.compiler.target>1.12</maven.compiler.target>
	</properties>

	<distributionManagement>
		<downloadUrl>https://github.com/mi-ki/BEAST</downloadUrl>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>beast</id>
			<name>BEAST</name>
			<url>file://${basedir}/target/deployment</url>
			<layout>default</layout>
		</repository>
		<site>
			<id>beast</id>
			<name>BEAST</name>
			<url>file://${basedir}/target/deployment/site</url>
		</site>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>11</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.gluonhq/charm-down-core -->
		<dependency>
			<groupId>com.gluonhq</groupId>
			<artifactId>charm-down-core</artifactId>
			<version>3.8.6</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.fxmisc.richtext/richtextfx -->
		<dependency>
			<groupId>org.fxmisc.richtext</groupId>
			<artifactId>richtextfx</artifactId>
			<version>0.9.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.fxmisc.undo/undofx<dependency> 
			<groupId>org.fxmisc.undo</groupId> <artifactId>undofx</artifactId><version>2.0.0</version> 
			</dependency> -->

		<!-- https://mvnrepository.com/artifact/org.reactfx/reactfx -->
		<dependency>
			<groupId>org.reactfx</groupId>
			<artifactId>reactfx</artifactId>
			<version>2.0-M5</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>2.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<scope>test</scope>
			<version>3.141.59</version>
		</dependency>
		<dependency>
			<groupId>com.opera</groupId>
			<artifactId>operadriver</artifactId>
			<scope>test</scope>
			<version>1.5</version>
			<exclusions>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-remote-driver</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4-runtime</artifactId>
			<version>4.7.2</version>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr4</artifactId>
			<version>4.7.2</version>
		</dependency>
		<dependency>
			<groupId>net.java.dev.jna</groupId>
			<artifactId>jna-platform</artifactId>
			<version>5.2.0</version>
		</dependency>
		<dependency>
			<groupId>de.erichseifert.gral</groupId>
			<artifactId>gral-core</artifactId>
			<version>0.11</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<mainClass>edu.pse.beast.highlevel.MainClass</mainClass>


						<compilerArgs>
						<arg>--add-exports</arg>
						<arg>javafx.graphics/com.sun.javafx.geom javafx.graphics/com.sun.javafx.text javafx.graphics/com.sun.javafx.scene.text</arg>
						<arg>--add-opens</arg>
						<arg>javafx.graphics/javafx.scene.text javafx.graphics/com.sun.javafx.text</arg>
						</compilerArgs>

				</configuration>
				<executions>
					<execution>
						<id>run</id>
						<phase>execution</phase>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.antlr</groupId>
				<artifactId>antlr4-maven-plugin</artifactId>
				<version>4.7.2</version>
				<executions>
					<execution>
						<goals>
							<goal>antlr4</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<release>11</release>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>edu.pse.beast.highlevel.MainClass</mainClass>
							<addDefaultImplementationEntries>
								true
							</addDefaultImplementationEntries>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<locales>en,de</locales>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<compilerVersion>1.12</compilerVersion>
						<source>12</source>
						<target>12</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<resources>
			<resource>
				<directory>./core/stringfiles/</directory>
			</resource>
			<resource>
				<directory>./src/main/resources/</directory>
			</resource>
		</resources>
	</build>
</project>
